--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
+    <!-- Configuración de metadatos básicos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Título de la página -->
     <title>MiyashiroMC - En Vivo en Kick</title>
+
+    <!-- Descripción para SEO -->
     <meta name="description" content="Mira el stream de MiyashiroMC en vivo desde Kick.">
+
+    <!-- Enlace a la hoja de estilos CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- Cabecera con el logotipo -->
     <header>
         <div class="logo">Miyashiro<span>MC</span></div>
     </header>
 
+    <!-- Contenido principal: El reproductor de stream -->
     <main>
         <div class="stream-container">
-            <iframe 
-                src="https://player.kick.com/miyashiromc" 
-                allowfullscreen="true" 
-                scrolling="no" 
-                frameborder="0">
+            <!-- Iframe para incrustar el stream de Kick.com -->
+            <iframe src="https://player.kick.com/miyashiromc" allowfullscreen="true" scrolling="no" frameborder="0">
             </iframe>
         </div>
     </main>
 
+    <!-- Pie de página con copyright -->
     <footer>
         <p>&copy; 2025 MiyashiroMC. Transmitiendo en Kick.</p>
     </footer>
 </body>
+
 </html>
