Agrega logo favicon a la página

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 
     <!-- Enlace a la hoja de estilos CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Icono de la pestaña (Favicon) -->
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
