Agrega contador de espectadores en vivo con Realtime Database

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
     <!-- Cabecera con el logotipo -->
     <header>
         <div class="logo">Miyashiro<span>MC</span></div>
+        <div class="viewer-count" id="viewer-count">
+            <span class="live-dot"></span>
+            <span id="count-number">0</span> en vivo
+        </div>
     </header>
 
     <!-- Contenido principal: El reproductor de stream y chat -->
